update waiter release mechanism, refactor AbstractJobDependency